# CS_370_resources

./: README.md
krealings_code/: reparent.txt
krealings_code/javaMutexandSemaphores/boundedbuffer/: BoundedBuffer.java  Buffer.java  Consumer.java  Factory.java  Producer.java  SleepUtilities.java
krealings_code/javaMutexandSemaphores/mutex/: MutualExclusionUtilities.java  SemaphoreFactory.java  SleepUtilities.java  Worker.java
krealings_code/rust_ex/open_options/src/: main.rs
krealings_code/rust_ex/read_file/: demo.txt
krealings_code/rust_ex/read_file/src/: main.rs
krealings_code/rust_ex/user_input/src/: main.rs
krealings_code/rust_ex/write_to_file/src/: main.rs
krealings_code/rust_intro/: Cargo.toml
krealings_code/rust_intro/basic/: array.rs  slice.rs  slice2.rs  tuple.rs  vector.rs  vector2.rs
krealings_code/rust_intro/close/: close2.rs  close3.rs  close4.rs  closure.rs
krealings_code/rust_intro/control_flow/: for.rs  if_else.rs  if_let_and_while.rs  infinite.rs  match.rs  while.rs
krealings_code/rust_intro/custom/: enum.rs  enum2.rs  enum3.rs  object.rs  struct.rs
krealings_code/rust_intro/errors/: error.rs  error2.rs  unwrap.txt
krealings_code/rust_intro/functions/: func.rs
krealings_code/rust_intro/generic/: gen.rs
krealings_code/rust_intro/lifetime/: borrow.rs  life.rs
krealings_code/rust_intro/print/: printing.rs
krealings_code/rust_intro/references/: ref.rs
krealings_code/rust_intro/strings/: strings.rs
krealings_code/rust_intro/traits/: trait2.rs  trait3.rs  traits.rs
krealings_code/rust_intro/vars/: variables.rs  variables.txt
krealings_code/rust_proc/c_pipe/src/: main.rs
krealings_code/rust_proc/command_simple/: Cargo.toml
krealings_code/rust_proc/command_simple/examples/: other.rs  spawn2.rs  spawn3.rs  waiting.rs
krealings_code/rust_proc/command_simple/src/: main.rs
krealings_code/rust_proc/ctrl_c/src/: main.rs
krealings_code/rust_proc/dup/: main.rs
krealings_code/rust_proc/fork_broke/: main.rs
krealings_code/rust_proc/fork_exec/: example_program.c  main.rs
krealings_code/rust_proc/fork_work/: main.rs
krealings_code/rust_proc/global/: Cargo.toml
krealings_code/rust_proc/global/examples/: immutable.rs  mutable_attempt1.rs  mutable_attempt2.rs  mutable_attempt3.rs  mutable_attempt4.rs
krealings_code/rust_proc/multi/src/: calling_eachother.rs  functions.rs  lib.rs  main.rs  utils.rs
krealings_code/rust_proc/multiple_signals/src/: main.rs
krealings_code/rust_proc/r_pipe/src/: main.rs
krealings_code/rust_proc/reparent/examples/: child.rs
krealings_code/rust_proc/reparent/src/: main.rs
krealings_code/rust_proc/share/: main.rs
krealings_code/rust_proc/simple/: main.rs
krealings_code/rust_proc/zombie/src/: main.rs
krealings_code/rust_share/arc_mutex_simple/examples/: arc.rs
krealings_code/rust_share/arc_mutex_simple/src/: main.rs
krealings_code/rust_share/arc_simple/examples/: arc.rs
krealings_code/rust_share/arc_simple/src/: main.rs
krealings_code/rust_share/condvar_simple/src/: main.rs
krealings_code/rust_share/deadlock/src/: main.rs
krealings_code/rust_share/mutex_simple/src/: main.rs
krealings_code/rust_share/n_threads_simple/src/: main.rs
krealings_code/rust_share/rwlock_simple/src/: main.rs
krealings_code/rust_share/wait_while/src/: main.rs
krealings_code/rust_thread/join_thread/src/: main.rs
krealings_code/rust_thread/main_thread/src/: main.rs
krealings_code/rust_thread/multiple_children/src/: main.rs
krealings_code/rust_thread/multiple_senders/src/: main.rs
krealings_code/threads/basic/: Driver.java  Driver2.java  Example.java  Example2.java
krealings_code/threads/threadPools/: Message.java  Order.java  Shared.java  TPExample.java
(+4 files in other folders)
