[package]
name = "command_simple"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "proc2"
path = "examples/spawn2.rs"

[[example]]
name = "proc3"
path = "examples/spawn3.rs"

[[example]]
name = "proc4"
path = "examples/waiting.rs"

[[example]]
name = "proc5"
path = "examples/other.rs"
