[package]
name = "global"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name="immutable"
path="examples/immutable.rs"

[[example]]
name="mutable1"
path="examples/mutable_attempt1.rs"

[[example]]
name="mutable2"
path="examples/mutable_attempt2.rs"

[[example]]
name="mutable3"
path="examples/mutable_attempt3.rs"

[[example]]
name="mutable4"
path="examples/mutable_attempt4.rs"
